class Authenticator:
    def __init__(self, user_database):
        self.user_database = user_database
