class DataBaseManager:
    def __init__(self, connection_string):
        self.connection_string = connection_string
