class PaymentProcessor:
    def __init__(self, api_key):
        self.api_key = api_key
